--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -14,18 +14,14 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  
   <connectionStrings>
     <!--<add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;port=9527;Initial Catalog=jif.cms;uid=root;pwd=root" />-->
     <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=192.168.0.130;port=3306;Initial Catalog=jif.cms;uid=root;pwd=123456" />
   </connectionStrings>
-
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-
     <!--最大请求长度,单位为kb-->
     <httpRuntime targetFramework="4.5" maxRequestLength="20480" />
-
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -40,13 +36,10 @@
         <add namespace="JIF.CMS.Management" />
       </namespaces>
     </pages>
-
     <authentication mode="Forms">
       <forms cookieless="UseCookies" name="ju" defaultUrl="/home" loginUrl="/welcome"></forms>
     </authentication>
-
   </system.web>
-
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
     <staticContent>
@@ -56,7 +49,6 @@
       <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
     </staticContent>
   </system.webServer>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -89,18 +81,21 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
   <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
-
   <entityFramework>
     <providers>
       <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
   </entityFramework>
-
 </configuration>
