--- a/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
@@ -37,7 +37,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
@@ -79,6 +79,7 @@
     <Compile Include="Tests\Contravariant_Covariant_Test.cs" />
     <Compile Include="Tests\HttpClientTest.cs" />
     <Compile Include="Tests\StackExchangeRedisTest.cs" />
+    <Compile Include="Tests\EnumExtensionsTest.cs" />
     <Compile Include="Tests\URLEncodeTest.cs" />
   </ItemGroup>
   <ItemGroup>
