--- a/code/JIF.CMS/JIF.CMS.Management.API/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management.API/Web.config
@@ -5,16 +5,38 @@
   -->
 <configuration>
   <configSections>
-    <section name="JIFConfig" type="JIF.CMS.Core.Configuration.JIFConfig, JIF.CMS.Core" requirePermission="false" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <sectionGroup name="common">
+      <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging"/>
+    </sectionGroup>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
 
   <appSettings></appSettings>
 
-  <!--暂时没有用到 JIF.CMS.Core.Configuration.JIFConfig-->
-  <JIFConfig></JIFConfig>
-
+  <!-- commonlogging 配置 -->
+  <common>
+    <!--[DEBUG < INFO < WARN < ERROR < FATAL]-->
+    <logging>
+      <!--<factoryAdapter type="Common.Logging.Simple.ConsoleOutLoggerFactoryAdapter, Common.Logging">
+        <arg key="level" value="WARN" />
+        <arg key="showLogName" value="true" />
+        <arg key="showDataTime" value="true" />
+        <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss:fff" />
+      </factoryAdapter>-->
+      <factoryAdapter type="Common.Logging.Log4Net.Log4NetLoggerFactoryAdapter, Common.Logging.Log4Net1213">
+        <!--FILE
+              FILE-WATCH
+              INLINE
+              EXTERNAL-->
+        <!--<arg key="configType" value="INLINE" />-->  <!-- 表示log4net的配置直接写在配置文件里 -->
+        <arg key="configType" value="FILE" />           <!-- 表示将log4net的配置放到单独的文件中 -->
+        <arg key="configFile" value="~/configs/log4net.config" />
+        <!--log4net使用独立的配置文件-->
+      </factoryAdapter>
+    </logging>
+  </common>
+  
   <connectionStrings>
     <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;port=9527;Initial Catalog=jif.cms;uid=root;pwd=root" />
   </connectionStrings>
