--- a/code/JIF.CMS/JIF.CMS.Management.API/packages.config
+++ b/code/JIF.CMS/JIF.CMS.Management.API/packages.config
@@ -2,13 +2,18 @@
 <packages>
   <package id="Autofac" version="4.5.0" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net45" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
+  <package id="Common.Logging.Log4Net1213" version="3.4.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
