--- a/code/JIF.CMS/JIF.CMS.Management/packages.config
+++ b/code/JIF.CMS/JIF.CMS.Management/packages.config
@@ -4,12 +4,17 @@
   <package id="Autofac" version="4.5.0" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
+  <package id="Common.Logging.Log4Net1213" version="3.4.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MiniProfiler" version="3.2.0.157" targetFramework="net45" />
   <package id="MiniProfiler.EF6" version="3.0.11" targetFramework="net45" />
