--- a/code/JIF.CMS/JIF.CMS.Management.API/Configs/log4net.config
+++ b/code/JIF.CMS/JIF.CMS.Management.API/Configs/log4net.config
@@ -40,6 +40,9 @@ http://www.cnblogs.com/lwhkdash/p/6422907.html - Log4net配置与使用简要说
     <param name="File" value="logs/" />
     <param name="StaticLogFileName" value="false" />
 
+    <!-- 日志文件编码格式 -->
+    <param name="Encoding" value="utf-8" />
+
     <!--日期的格式-->
     <param name="DatePattern" value="yyyy-MM-dd'.log'" />
     <param name="AppendToFile" value="true" />
