--- a/code/JIF.CMS/JIF.CMS.Web.Framework/packages.config
+++ b/code/JIF.CMS/JIF.CMS.Web.Framework/packages.config
@@ -2,10 +2,15 @@
 <packages>
   <package id="Autofac" version="4.5.0" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net45" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
+  <package id="Common.Logging.Log4Net1213" version="3.4.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
 </packages>
