--- a/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Tests\HttpClientTest.cs" />
     <Compile Include="Tests\StackExchangeRedisTest.cs" />
     <Compile Include="Tests\EnumExtensionsTest.cs" />
+    <Compile Include="Tests\AsyncCodeTest.cs" />
     <Compile Include="Tests\URLEncodeTest.cs" />
   </ItemGroup>
   <ItemGroup>
