--- a/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Tests\StackExchangeRedisTest.cs" />
     <Compile Include="Tests\EnumExtensionsTest.cs" />
     <Compile Include="Tests\AsyncCodeTest.cs" />
+    <Compile Include="Tests\CommonTest.cs" />
     <Compile Include="Tests\URLEncodeTest.cs" />
   </ItemGroup>
   <ItemGroup>
