--- a/code/JIF.CMS/JIF.CMS.Test.Repositories/JIF.CMS.Test.Repositories.csproj
+++ b/code/JIF.CMS/JIF.CMS.Test.Repositories/JIF.CMS.Test.Repositories.csproj
@@ -91,6 +91,7 @@
     <None Include="App.config" />
     <Content Include="log4net.config">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="packages.config" />
   </ItemGroup>
