--- a/code/JIF.CMS/JIF.CMS.Test.Repositories/JIF.CMS.Test.Repositories.csproj
+++ b/code/JIF.CMS/JIF.CMS.Test.Repositories/JIF.CMS.Test.Repositories.csproj
@@ -78,6 +78,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
