--- a/code/JIF.CMS/JIF.CMS.Test.Core/app.config
+++ b/code/JIF.CMS/JIF.CMS.Test.Core/app.config
@@ -1,5 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="common">
+      <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+    </sectionGroup>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+
+  <!-- commonlogging 配置 -->
+  <common>
+    <!--[DEBUG < INFO < WARN < ERROR < FATAL]-->
+    <logging>
+      <!--<factoryAdapter type="Common.Logging.Simple.ConsoleOutLoggerFactoryAdapter, Common.Logging">
+        <arg key="level" value="WARN" />
+        <arg key="showLogName" value="true" />
+        <arg key="showDataTime" value="true" />
+        <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss:fff" />
+      </factoryAdapter>-->
+      <factoryAdapter type="Common.Logging.Log4Net.Log4NetLoggerFactoryAdapter, Common.Logging.Log4Net1213">
+        <!--FILE
+              FILE-WATCH
+              INLINE
+              EXTERNAL-->
+        <!--<arg key="configType" value="INLINE" />-->
+        <!-- 表示log4net的配置直接写在配置文件里 -->
+        <arg key="configType" value="FILE" />
+        <!-- 表示将log4net的配置放到单独的文件中 -->
+        <arg key="configFile" value="log4net.config" />
+        <!--log4net使用独立的配置文件-->
+      </factoryAdapter>
+    </logging>
+  </common>
+  <!-- commonlogging 配置 -->
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
