update core rm autofac.mvc integration

--- a/code/JIF.CMS/JIF.CMS.Management/appsettings.json
+++ b/code/JIF.CMS/JIF.CMS.Management/appsettings.json
@@ -9,7 +9,7 @@
     "UploadAddress": "http://www.qiniu.com"
   },
   "RedisConfig": {
-    "Enabled": true,
+    "Enabled": false,
     "Server": "192.168.0.118:6379"
   }
 }
