--- a/code/JIF.CMS/JIF.CMS.Management.API/Configs/log4net.config
+++ b/code/JIF.CMS/JIF.CMS.Management.API/Configs/log4net.config
@@ -7,11 +7,12 @@ http://www.cnblogs.com/lwhkdash/p/6422907.html - Log4net配置与使用简要说
 -->
 
 <log4net>
-  <!--<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger %ndc - %message%newline" />
-      </layout>
-    </appender>-->
+  
+  <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%date [%thread] %-5level %logger %ndc - %message%newline" />
+    </layout>
+  </appender>
 
   <appender name="InfoRollingLogFileAppender" type="log4net.Appender.RollingFileAppender, log4net">
     <param name="LockingModel" type="log4net.Appender.FileAppender+MinimalLock" />
