--- a/code/JIF.CMS/JIF.CMS.Management.API/Configs/log4net.config
+++ b/code/JIF.CMS/JIF.CMS.Management.API/Configs/log4net.config
@@ -66,7 +66,8 @@ http://www.cnblogs.com/lwhkdash/p/6422907.html - Log4net配置与使用简要说
 
     <!-- 输出格式化 -->
     <layout type="log4net.Layout.PatternLayout">
-      <param name="ConversionPattern" value="%n[时间]:%d%n[级别]:%p%n[内容]:%m%n" />
+      <!--<param name="ConversionPattern" value="%n[时间]:%d%n[级别]:%p%n[内容]:%m%n" />-->
+      <param name="ConversionPattern" value="[内容]:%m%n" />
     </layout>
 
     <!-- 记录日志级别限定 -->
