--- a/code/JIF.CMS/JIF.CMS.Management.API/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management.API/Web.config
@@ -32,7 +32,7 @@
               INLINE
               EXTERNAL-->
         <!--<arg key="configType" value="INLINE" />-->  <!-- 表示log4net的配置直接写在配置文件里 -->
-        <arg key="configType" value="FILE" />           <!-- 表示将log4net的配置放到单独的文件中 -->
+        <arg key="configType" value="FILE-WATCH" />           <!-- 表示将log4net的配置放到单独的文件中 -->
         <arg key="configFile" value="~/configs/log4net.config" />
         <!--log4net使用独立的配置文件-->
       </factoryAdapter>
