--- a/code/JIF.CMS/JIF.CMS.WebApi.Framework/JIF.CMS.WebApi.Framework.csproj
+++ b/code/JIF.CMS/JIF.CMS.WebApi.Framework/JIF.CMS.WebApi.Framework.csproj
@@ -94,7 +94,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="DependencyRegistrar.cs" />
     <Compile Include="Filters\AdminAuthorizeAttribute.cs" />
-    <Compile Include="Filters\ValidateModelAttribute.cs" />
+    <Compile Include="Filters\ValidateReqestParamsAttribute.cs" />
     <Compile Include="Filters\WebApiAppExceptionAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebWorkContext.cs" />
