--- a/code/JIF.CMS/JIF.CMS.Test.Repositories/App.config
+++ b/code/JIF.CMS/JIF.CMS.Test.Repositories/App.config
@@ -26,7 +26,7 @@
               EXTERNAL-->
         <!--<arg key="configType" value="INLINE" />-->
         <!-- 表示log4net的配置直接写在配置文件里 -->
-        <arg key="configType" value="FILE" />
+        <arg key="configType" value="FILE-WATCH" />
         <!-- 表示将log4net的配置放到单独的文件中 -->
         <arg key="configFile" value="log4net.config" />
         <!--log4net使用独立的配置文件-->
