update EncyptHelper & EncyptTest

--- a/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Tests\AsyncCodeTest.cs" />
     <Compile Include="Tests\CommonTest.cs" />
     <Compile Include="Tests\GushiWenSiteContentTest.cs" />
+    <Compile Include="Tests\EncodingTest.cs" />
     <Compile Include="Tests\URLEncodeTest.cs" />
   </ItemGroup>
   <ItemGroup>
