--- a/code/JIF.CMS/JIF.CMS.Core/JIF.CMS.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Core/JIF.CMS.Core.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Helpers\EncodeHelper.cs" />
     <Compile Include="Helpers\ImageHelper.cs" />
     <Compile Include="Helpers\NpoiExcelHelper.cs" />
+    <Compile Include="Helpers\RegexHelper.cs" />
     <Compile Include="Helpers\Utils.cs" />
     <Compile Include="HttpApiResult\ApiResult.cs" />
     <Compile Include="Infrastructure\AppDomainTypeFinder.cs" />
