--- a/code/JIF.CMS/JIF.CMS.Services/JIF.CMS.Services.csproj
+++ b/code/JIF.CMS/JIF.CMS.Services/JIF.CMS.Services.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Authentication\JsonTokenAuthenticationService.cs" />
     <Compile Include="BaseService.cs" />
     <Compile Include="IBaseService.cs" />
+    <Compile Include="JIFConsts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SysManager\Dtos\LoginOutput.cs" />
     <Compile Include="SysManager\Dtos\SysAdminInertBasicInfoInput.cs" />
