fix management web login use sessionless

--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -19,6 +19,10 @@
     <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=192.168.0.130;port=3306;Initial Catalog=jif.cms;uid=root;pwd=123456" />
   </connectionStrings>
   <system.web>
+
+    <!---全局关闭session-->
+    <!--<sessionState mode="Off"></sessionState>-->
+
     <compilation debug="true" targetFramework="4.5" />
     <!--最大请求长度,单位为kb-->
     <httpRuntime targetFramework="4.5" maxRequestLength="20480" />
