--- a/code/JIF.CMS/JIF.CMS.Web.Framework/JIF.CMS.Web.Framework.csproj
+++ b/code/JIF.CMS/JIF.CMS.Web.Framework/JIF.CMS.Web.Framework.csproj
@@ -108,6 +108,7 @@
   <ItemGroup>
     <Compile Include="Controllers\AdminControllerBase.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CookieTempDataProvider.cs" />
     <Compile Include="DependencyRegistrar.cs" />
     <Compile Include="Filters\AdminAuthorizeAttribute.cs" />
     <Compile Include="Models\AttachmentViewModel.cs" />
