--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -22,6 +22,7 @@
 
     <!---全局关闭session-->
     <!--<sessionState mode="Off"></sessionState>-->
+    <sessionState cookieless="true"></sessionState>
 
     <compilation debug="true" targetFramework="4.5" />
     <!--最大请求长度,单位为kb-->
