--- a/code/JIF.CMS/JIF.CMS.Core/JIF.CMS.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Core/JIF.CMS.Core.csproj
@@ -107,7 +107,6 @@
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\StopwatchExtensions.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\TreeRelationObjectExtensions.cs" />
     <Compile Include="Extensions\IEnumerableExtensions.cs" />
     <Compile Include="Helpers\DateTimeHelper.cs" />
@@ -115,6 +114,7 @@
     <Compile Include="Helpers\ImageHelper.cs" />
     <Compile Include="Helpers\NpoiExcelHelper.cs" />
     <Compile Include="Helpers\RegexHelper.cs" />
+    <Compile Include="Helpers\StringHelper.cs" />
     <Compile Include="Helpers\Utils.cs" />
     <Compile Include="HttpApiResult\ApiResult.cs" />
     <Compile Include="Infrastructure\AppDomainTypeFinder.cs" />
