--- a/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Tests\DateTimeTest.cs" />
     <Compile Include="Tests\MathHelperTest.cs" />
     <Compile Include="Tests\CsvHelperTest.cs" />
+    <Compile Include="Tests\StringHelperTest.cs" />
     <Compile Include="Tests\URLEncodeTest.cs" />
   </ItemGroup>
   <ItemGroup>
