update ImageHelperTest welcome verifycode no session how to set and use ?

--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -21,8 +21,8 @@
   <system.web>
 
     <!---全局关闭session-->
-    <!--<sessionState mode="Off"></sessionState>-->
-    <sessionState cookieless="true"></sessionState>
+    <sessionState mode="Off"></sessionState>
+    <!--<sessionState cookieless="true"></sessionState>-->
 
     <compilation debug="true" targetFramework="4.5" />
     <!--最大请求长度,单位为kb-->
