--- a/code/JIF.CMS/JIF.CMS.Services/JIF.CMS.Services.csproj
+++ b/code/JIF.CMS/JIF.CMS.Services/JIF.CMS.Services.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Attachments\Dtos\AttachmentSearchListOutput.cs" />
     <Compile Include="Attachments\Dtos\InsertAttachmentInput.cs" />
     <Compile Include="Attachments\IAttachmentService.cs" />
+    <Compile Include="Authentication\CustomizeCookiesAuthenticationService.cs" />
     <Compile Include="Authentication\FormsCookiesAuthenticationService.cs" />
     <Compile Include="Authentication\IAuthenticationService.cs" />
     <Compile Include="Authentication\JsonTokenAuthenticationService.cs" />
