--- a/code/JIF.CMS/JIF.CMS.Management.API/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management.API/Web.config
@@ -37,6 +37,7 @@
       </factoryAdapter>
     </logging>
   </common>
+  <!-- commonlogging 配置 -->
   
   <connectionStrings>
     <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;port=9527;Initial Catalog=jif.cms;uid=root;pwd=root" />
